--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -53,7 +53,7 @@ file.reference.java-json.jar=/Users/edithcalva/Documents/dependencias/Librerias/
 file.reference.java-json.jar-1=/Users/edithcalva/Documents/dependencias/Librerias/java-json.jar
 file.reference.java-property-utils-1.9.1.jar=/Users/edithcalva/Documents/dependencias/Librerias/java-property-utils-1.9.1.jar
 file.reference.jetty-servlet-11.0.18.jar=/Users/edithcalva/Documents/dependencias/Librerias/jetty-servlet-11.0.18.jar
-file.reference.mysql-connector-java-5.1.48.jar=/Users/edithcalva/Documents/dependencias/Librerias/mysql-connector-java-5.1.48.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=/Users/urielleal/Documents/javaDependencias/lib/mysql-connector-java-5.1.23-bin.jar
 file.reference.org-apache-commons-codec.jar=/Users/edithcalva/Documents/dependencias/Librerias/org-apache-commons-codec.jar
 file.reference.org-apache-commons-codec.jar-1=/Users/edithcalva/Documents/dependencias/Librerias/org-apache-commons-codec.jar
 file.reference.org-apache-commons-logging.jar=/Users/edithcalva/Documents/dependencias/Librerias/org-apache-commons-logging.jar
@@ -89,9 +89,7 @@ javac.classpath=\
     ${file.reference.java-property-utils-1.9.1.jar}:\
     ${file.reference.cors-filter-2.6.jar}:\
     ${file.reference.commons-httpclient-3.0.jar-1}:\
-    ${file.reference.mysql-connector-java-5.1.48.jar}:\
-    ${libs.MySQLDriver.classpath}:\
-    ${libs.MySQL.classpath}
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
