--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,6 @@
-# Generated library paths - copy these to your nbproject/private/private.properties
+# Updated library paths - copy these to your nbproject/private/private.properties
 file.reference.base64-2.3.7.jar=/home/cyan/b-service-buw/lib/base64-2.3.7.jar
-file.reference.commons-collections-3.2.1.jar=/home/cyan/b-service-buw/lib/commons-collections-3.2.1.jar  
+file.reference.commons-collections-3.2.1.jar=/home/cyan/b-service-buw/lib/commons-collections-3.2.1.jar
 file.reference.commons-httpclient-3.0.jar=/home/cyan/b-service-buw/lib/commons-httpclient-3.0.jar
 file.reference.commons-lang-2.1.jar=/home/cyan/b-service-buw/lib/commons-lang-2.1.jar
 file.reference.cors-filter-2.6.jar=/home/cyan/b-service-buw/lib/cors-filter-2.6.jar
@@ -11,8 +11,23 @@ file.reference.java-property-utils-1.9.1.jar=/home/cyan/b-service-buw/lib/java-p
 file.reference.jetty-servlet-11.0.18.jar=/home/cyan/b-service-buw/lib/jetty-servlet-11.0.18.jar
 file.reference.org-apache-commons-codec.jar=/home/cyan/b-service-buw/lib/org-apache-commons-codec.jar
 file.reference.org-apache-commons-logging.jar=/home/cyan/b-service-buw/lib/org-apache-commons-logging.jar
-file.reference.mysql-connector-java-5.1.23-bin.jar=/home/cyan/b-service-buw/lib/mysql-connector-java-5.1.23-bin.jar
-file.reference.JDK_8.0.422-zulu_SPKMAN_1_platform.jar=/home/cyan/b-service-buw/lib/JDK_8.0.422-zulu_SPKMAN_1_platform.jar
+file.reference.mysql-connector-java-5.1.23.jar=/home/cyan/b-service-buw/lib/mysql-connector-java-5.1.23.jar
+file.reference.JDK_8.0.422-zulu_SDKMAN_1_platform.jar=/home/cyan/b-service-buw/lib/JDK_8.0.422-zulu_SDKMAN_1_platform.jar
+        # Generated library paths - copy these to your nbproject/private/private.properties
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 deploy.ant.properties.file=/Users/urielleal/Library/Application Support/NetBeans/21/tomcat80.properties
 j2ee.server.domain=/Users/urielleal/Documents/tomcat8
 j2ee.server.instance=tomcat80:home=/Users/urielleal/Documents/tomcat8:base=/Users/urielleal/Documents/tomcat8
