--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,8 +42,8 @@ file.reference.commons-collections-3.2.1.jar=/home/cyan/b-service-buw/lib/common
 file.reference.commons-collections-3.2.1.jar-1=/home/cyan/b-service-buw/lib/commons-collections-3.2.1.jar
 file.reference.commons-httpclient-3.0.jar=/home/cyan/b-service-buw/lib/commons-httpclient-3.0.jar
 file.reference.commons-httpclient-3.0.jar-1=/home/cyan/b-service-buw/lib/commons-httpclient-3.0.jar
-file.reference.commons-lang-2.1.jar=/Users/edithcalva/Documents/dependencias/Librerias/commons-lang-2.1.jar
-file.reference.commons-lang-2.1.jar-1=/Users/edithcalva/Documents/dependencias/Librerias/commons-lang-2.1.jar
+file.reference.commons-lang-2.1.jar=/home/cyan/b-service-buw/lib/commons-lang-2.1.jar
+file.reference.commons-lang-2.1.jar-1=/home/cyan/b-service-buw/lib/commons-lang-2.1.jar
 file.reference.cors-filter-2.6.jar=/Users/edithcalva/Documents/dependencias/Librerias/cors-filter-2.6.jar
 file.reference.httpclient-4.5.6.jar=/home/cyan/b-service-buw/lib/httpclient-4.5.6.jar
 file.reference.httpclient-4.5.6.jar-1=/home/cyan/b-service-buw/lib/httpclient-4.5.6.jar
@@ -51,13 +51,15 @@ file.reference.httpcore-4.4.13.jar=/home/cyan/b-service-buw/lib/httpcore-4.4.13.
 file.reference.httpcore-4.4.13.jar-1=/home/cyan/b-service-buw/lib/httpcore-4.4.13.jar
 file.reference.java-json.jar=/home/cyan/b-service-buw/lib/java-json.jar
 file.reference.java-json.jar-1=/home/cyan/b-service-buw/lib/java-json.jar
-file.reference.java-property-utils-1.9.1.jar=/Users/edithcalva/Documents/dependencias/Librerias/java-property-utils-1.9.1.jar
-file.reference.jetty-servlet-11.0.18.jar=/Users/edithcalva/Documents/dependencias/Librerias/jetty-servlet-11.0.18.jar
-file.reference.mysql-connector-java-5.1.23-bin.jar=/home/cyan/b-service-buw/lib/mysql-connector-java-5.1.23-bin.jar
-file.reference.org-apache-commons-codec.jar=/Users/edithcalva/Documents/dependencias/Librerias/org-apache-commons-codec.jar
-file.reference.org-apache-commons-codec.jar-1=/Users/edithcalva/Documents/dependencias/Librerias/org-apache-commons-codec.jar
-file.reference.org-apache-commons-logging.jar=/Users/edithcalva/Documents/dependencias/Librerias/org-apache-commons-logging.jar
-file.reference.org-apache-commons-logging.jar-1=/Users/edithcalva/Documents/dependencias/Librerias/org-apache-commons-logging.jar
+file.reference.java-property-utils-1.9.1.jar=/home/cyan/b-service-buw/lib/java-property-utils-1.9.1.jar
+file.reference.jetty-servlet-11.0.18.jar=/home/cyan/b-service-buw/lib/jetty-servlet-11.0.18.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=/home/cyan/b-service-buw/lib/mysql-connector-java-5.1.23.jar
+file.reference.org-apache-commons-codec.jar=/home/cyan/b-service-buw/lib/org-apache-commons-codec.jar
+file.reference.org-apache-commons-codec.jar-1=/home/cyan/b-service-buw/lib/org-apache-commons-codec.jar
+file.reference.org-apache-commons-logging.jar=/home/cyan/b-service-buw/lib/org-apache-commons-logging.jar
+file.reference.org-apache-commons-logging.jar-1=/home/cyan/b-service-buw/lib/org-apache-commons-logging.jar
+file.reference.tomcat-util-9.0.65.jar=lib/tomcat-util-9.0.65.jar
+file.reference.javax.servlet-api-4.0.1.jar=lib/javax.servlet-api-4.0.1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -89,7 +91,9 @@ javac.classpath=\
     ${file.reference.java-property-utils-1.9.1.jar}:\
     ${file.reference.cors-filter-2.6.jar}:\
     ${file.reference.commons-httpclient-3.0.jar-1}:\
-    ${file.reference.mysql-connector-java-5.1.23.jar}
+    ${file.reference.mysql-connector-java-5.1.23.jar} ${file.reference.tomcat-util-9.0.65.jar} ${file.reference.javax.servlet-api-4.0.1.jar}:\
+    ${file.reference.javax.servlet-api-4.0.1.jar}:\
+    ${file.reference.tomcat-util-9.0.65.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -118,7 +122,7 @@ javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 no.dependencies=true
 persistence.xml.dir=${conf.dir}
-platform.active=JDK_8.0.422-zulu__SDKMAN_
+platform.active=JDK_8.0.442-zulu__SDKMAN_
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
